# 20230821JPMC

./: add_operator.py  carddeck.py  creating_a_decorator.py  deep_vs_shallow_vs_alias.py  easy_archives.py  globals_and_locals.py  group_words.py  hello.py  higher_order_functions.py  map_and_reduce.py  named_tuples.py  operator_module.py  pandasGroupbyDemoJPMC.ipynb  partial_functions.py  play_cards.py  president.py  skip_first_line.py  snakeutils.py  some_iterables.py  using_attributes.py  using_chain.py
ANSWERS/: count_ext.py  parse_email_addresses.py  sum_of_values.py
DATA/: presidents.csv
EXAMPLES/: builder_pattern.py  count_with_counter.py  cy_primes_main.py  deco_debug_class.py  defaultdict_ex.py  insect.py  inspect_ex.py  line_trimmer.py  multiindexlist.py  numba_primes.py  pp_fist_full_of_parsers.py  pp_parse_ini.py  pp_parse_ssn.py  pp_parse_urls.py  pp_simple.py  pp_url_parser.py  reptile.py  single_dispatch.py  stringkeydict.py  thr_locking.py  thr_noclass.py  thr_pool.py  thr_pool_mw.py  thr_simple.py  trimmedfile.py  use_skd.py  zipfile_ex.py
SETUP/: requirements.txt
mymodule/: pyproject.toml  setup.cfg
mymodule/docs/source/: conf.py  index.rst
mymodule/src/: mymodule_main.py
mymodule/tests/: test_mymodule.py
