[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# the above is required

##################################################
# used when only using this file, not setup.cfg
##################################################

[project]
name = "mymodule"
version = "1.0.0"
authors = [
    { name="John Strickler", email="jstrickler@gmail.com" },
]
description = "A Great Module"
readme = "README.rst"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
#    'roman >= 3.0',
#    'requests[security] < 3',
#    'subprocess32; python_version < "3.2"',
]

#[tool.setuptools]
#packages=["temperature"]

# [project.scripts]
# script1='mymodule:_cli_script1'
# script2='mymodule:_cli_script2'


